<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterEventActivity">

    <TextView
        android:id="@+id/textViewEventNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/item_event_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewEventDateTimeDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/item_event_date"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textViewEventNameDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewEventDescriptionDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/create_event_description_hint"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textViewEventDateTimeDetail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>