<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/buttonSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sync_calendar"
        app:layout_constraintTop_toBottomOf="@id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/textViewEventsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_available_events"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/buttonSync"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <ImageButton
        android:id="@+id/buttonEdit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_edit"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/textViewEventsTitle"
        app:layout_constraintBottom_toBottomOf="@id/textViewEventsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/main_create_event_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewEventsTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_event"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:contentDescription="@string/main_contact_us_description"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>